# Desenvolvimento-de-APIs-com-Flask

banco/: pyproject.toml
banco/instance/: meu_banco.sqlite
banco/migrations/: alembic.ini  env.py
banco/migrations/versions/: 5a06aa6dd6f0_add_password_fild.py  e8f12abc52e1_inicando_migracao.py
banco/src/: app.py  utils.py
banco/src/controllers/: auth.py  post.py  role.py  user.py
banco/tests/: test_utils.py
banco/tests/integration/: conftest.py
banco/tests/integration/controllers/: test_user.py
banco/tests/unit/: test_utils.py
