[tool.poetry]
name = "banco"
version = "0.1.0"
description = ""
authors = ["DieglisonVarejao <dieglisonvarejao01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "*"
pytest = "*"
pytest-mock = "*"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"

[tool.pytest]
# addopts = ["-ra", "-q"]
addopts = ["-vvv"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"